Adding new services

--- a/index.html
+++ b/index.html
@@ -543,6 +543,149 @@
         </div>
 
 
+        <div class="service-card bg-white p-8 rounded-2xl fade-in">
+  <!-- الصورة -->
+  <div class="w-full h-64 mb-6 mx-auto overflow-hidden">
+    <img 
+      src="./assets/img/Design-and-programming.webp" 
+      alt="تصميم وبرمجة المواقع الإلكترونية باحترافية" 
+      class="w-full  object-contain transform transition-transform duration-500 hover:scale-110"
+      loading="lazy"
+      width="800"
+      height="600"
+    >
+  </div>
+
+  <!-- العنوان -->
+  <h2 class="text-xl font-bold mb-4">تصميم وبرمجة المواقع الإلكترونية</h2>
+
+  <!-- الوصف -->
+  <p class="text-gray-600 mb-6">
+    نقدم خدمة تصميم وتطوير مواقع إلكترونية احترافية وسريعة الاستجابة 
+    <strong>(Responsive)</strong> تعكس هوية علامتك التجارية، 
+    مع تجربة مستخدم سلسة وأداء مميز يحقق أهداف عملك الرقمية.
+  </p>
+
+  <!-- المميزات -->
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تصميم عصري متوافق مع جميع الأجهزة</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>برمجة مواقع سريعة وآمنة بأحدث التقنيات</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تحسين لمحركات البحث <span class="text-gray-700 font-medium">(SEO)</span></li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>لوحة تحكم سهلة لإدارة المحتوى</li>
+  </ul>
+
+  <!-- زر الاتصال -->
+  <div class="text-center">
+    <a href="tel:+201234567890"
+      class="bg-gradient-to-r from-primary to-primary-dark text-white px-4 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+  </div>
+      </div>
+
+<div class="service-card bg-white p-8 rounded-2xl fade-in">
+  <!-- الصورة -->
+  <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
+    <img 
+      src="./assets/img/Electronic-marketing.png" 
+      alt="التسويق الإلكتروني وإدارة الحملات الإعلانية" 
+      class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
+  </div>
+
+  <!-- العنوان -->
+  <h2 class="text-xl font-bold mb-4">التسويق الإلكتروني وإدارة الحملات الإعلانية</h2>
+
+  <!-- الوصف -->
+  <p class="text-gray-600 mb-6">
+    نوفر لك استراتيجيات تسويق احترافية لإيصال علامتك التجارية إلى جمهورك المستهدف،
+    مع إدارة حملات إعلانية مدروسة تضمن أفضل النتائج وتحقيق أعلى عائد على الاستثمار.
+  </p>
+
+  <!-- المميزات -->
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-green-500 ml-2"></i>إعلانات ممولة على فيسبوك وإنستجرام</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تحسين محركات البحث (SEO)</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تحليل النتائج والتقارير الدورية</li>
+  </ul>
+
+  <!-- زر الاتصال -->
+  <div class="text-center">
+    <a href="tel:+965501234567" 
+       class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+  </div>
+</div>
+
+
+
+<div class="service-card bg-white p-8 rounded-2xl fade-in">
+  <!-- الصورة -->
+  <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
+    <img 
+      src="./assets/img/Photography-and-montage.png" 
+      alt="خدمات التصوير والمونتاج" 
+      class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
+  </div>
+
+  <!-- العنوان -->
+  <h2 class="text-xl font-bold mb-4">خدمات التصوير والمونتاج</h2>
+
+  <!-- الوصف -->
+  <p class="text-gray-600 mb-6">
+    نقدم لك خدمات تصوير احترافية ومونتاج إبداعي لإبراز منتجاتك وأعمالك
+    بأفضل صورة ممكنة، مع لمسة فنية تساهم في جذب عملائك وزيادة التفاعل مع علامتك التجارية.
+  </p>
+
+  <!-- المميزات -->
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تصوير منتجات بجودة عالية</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>مونتاج احترافي للفيديوهات</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>إعداد محتوى مرئي للسوشيال ميديا</li>
+  </ul>
+
+  <!-- زر الاتصال -->
+  <div class="text-center">
+    <a href="tel:+965501234567" 
+       class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+  </div>
+</div>
+
+<div class="service-card bg-white p-8 rounded-2xl fade-in">
+  <!-- الصورة -->
+  <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
+    <img 
+      src="./assets/img/Logo-design.png" 
+      alt="تصميم لوجو وهوية بصرية احترافية" 
+      class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
+  </div>
+
+  <!-- العنوان -->
+  <h2 class="text-xl font-bold mb-4">تصميم اللوجو والهوية البصرية</h2>
+
+  <!-- الوصف -->
+  <p class="text-gray-600 mb-6">
+    نقدم تصاميم لوجوهات وهويات بصرية مبتكرة تساعدك على إبراز علامتك التجارية
+    بشكل مميز واحترافي، وتترك انطباعًا قويًا لدى جمهورك المستهدف.
+  </p>
+
+  <!-- المميزات -->
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-green-500 ml-2"></i>تصاميم إبداعية تعكس رؤيتك</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>هوية متكاملة لجميع الوسائط</li>
+    <li><i class="fas fa-check text-green-500 ml-2"></i>ملفات جاهزة للطباعة والاستخدام الرقمي</li>
+  </ul>
+
+  <!-- زر الاتصال -->
+  <div class="text-center">
+    <a href="tel:+965501234567" 
+       class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+  </div>
+</div>
 
 
       </div>
@@ -623,87 +766,130 @@
   </style>
 
 
-<section class="relative bg-white py-16 md:py-20">
+<section 
+  id="why-choose-egypt" 
+  class="relative bg-white py-16 md:py-20"
+  aria-labelledby="why-choose-title"
+>
   <div class="container mx-auto px-4 sm:px-6 lg:px-12">
-    
+
     <!-- العنوان -->
     <div class="text-center mb-14 max-w-3xl mx-auto">
-      <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold text-gray-900 mb-4 leading-snug">
+      <h2 
+        id="why-choose-title" 
+        class="text-3xl sm:text-4xl md:text-5xl font-bold text-gray-900 mb-4 leading-snug"
+      >
         لماذا تختار 
         <span class="text-primary bg-clip-text bg-gradient-to-r from-primary to-primary-dark">
           ايجبت؟
         </span>
       </h2>
       <p class="text-gray-600 text-base sm:text-lg leading-relaxed">
-        لأننا نصنع الفارق بين الإعلان العادي والإعلان الفاخر الذي يبقى في ذهن جمهورك.
+        نحن في <strong>ايجبت</strong> نمتاز بتقديم حلول تسويقية مبتكرة تجعل علامتك التجارية تتصدر السوق،
+        مع التركيز على الجودة، الابتكار، وتجربة عميل لا تُنسى.
       </p>
     </div>
 
     <!-- المحتوى -->
     <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-      
+
       <!-- النصوص -->
       <div class="space-y-8">
-        <!-- ميزة -->
+
+        <!-- ميزة 1 -->
         <div class="flex items-start gap-4">
           <div class="bg-gradient-to-r from-primary to-primary-dark text-white p-4 rounded-xl flex-shrink-0 shadow-md">
-            <i class="fas fa-lightbulb text-xl"></i>
+            <i class="fas fa-lightbulb text-xl" aria-hidden="true"></i>
           </div>
           <div>
-            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">أفكار إبداعية</h3>
+            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">
+              أفكار إبداعية خارج الصندوق
+            </h3>
             <p class="text-gray-600 text-sm sm:text-base">
-              نقدم حلولًا إعلانية مبتكرة خارج الصندوق تضعك دائمًا في المقدمة.
+              نصمم استراتيجيات تسويقية فريدة تساعدك على جذب عملاء جدد
+              وبناء صورة قوية لعلامتك التجارية في السوق.
             </p>
           </div>
         </div>
 
-        <!-- ميزة -->
+        <!-- ميزة 2 -->
         <div class="flex items-start gap-4">
           <div class="bg-gradient-to-r from-primary to-primary-dark text-white p-4 rounded-xl flex-shrink-0 shadow-md">
-            <i class="fas fa-gem text-xl"></i>
+            <i class="fas fa-gem text-xl" aria-hidden="true"></i>
           </div>
           <div>
-            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">جودة فاخرة</h3>
+            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">
+              جودة فاخرة تنافس العالمية
+            </h3>
             <p class="text-gray-600 text-sm sm:text-base">
-              نهتم بأدق التفاصيل لتقديم منتج يليق باسم علامتك التجارية.
+              نستخدم أحدث تقنيات التصميم والإعلان لنضمن لك منتجًا يليق
+              بمكانتك ويحقق أقصى عائد استثماري.
             </p>
           </div>
         </div>
 
-        <!-- ميزة -->
+        <!-- ميزة 3 -->
         <div class="flex items-start gap-4">
           <div class="bg-gradient-to-r from-primary to-primary-dark text-white p-4 rounded-xl flex-shrink-0 shadow-md">
-            <i class="fas fa-handshake text-xl"></i>
+            <i class="fas fa-handshake text-xl" aria-hidden="true"></i>
           </div>
           <div>
-            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">شراكة طويلة الأمد</h3>
+            <h3 class="text-xl sm:text-2xl font-bold mb-2 text-gray-900">
+              شراكة نجاح طويلة الأمد
+            </h3>
             <p class="text-gray-600 text-sm sm:text-base">
-              نبني علاقة نجاح متبادل تستمر معك لسنوات.
+              نحن لا نقدم خدمات لمرة واحدة، بل نبني علاقة مستمرة
+              لدعم تطور عملك وتحقيق أهدافك المستقبلية.
             </p>
           </div>
+        </div>
+
+        <!-- CTA -->
+        <div class="mt-8">
+          <a 
+            href="/contact" 
+            class="inline-block bg-primary text-white font-semibold px-6 py-3 rounded-xl shadow-md hover:bg-primary-dark transition duration-300"
+          >
+            تواصل معنا الآن
+          </a>
         </div>
       </div>
 
       <!-- الصور -->
-      <div class="grid grid-cols-2 gap-6">
-        <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500 mt-6 sm:mt-10">
-          <img 
-            src="./assets/img/hero-1.webp" 
-            alt="تصميم براند إبداعي" 
-            class="w-full h-full object-cover"
-          >
-        </div>
-        <div class="rounded-2xl overflow-hidden shadow-lg transform hover:scale-105 transition duration-500">
-          <img 
-            src="./assets/img/hero-2.webp" 
-            alt="إعلان فاخر يلفت الانتباه" 
-            class="w-full h-full object-cover"
-          >
-        </div>
-      </div>
+<div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
+  <!-- الصورة الكبيرة -->
+  <div class="mt-6 sm:mt-10">
+    <img 
+      src="./assets/img/implementation-of-lighting.webp" 
+      alt="تصميم براند إبداعي يعكس هوية العلامة التجارية" 
+      class="w-full h-[550px] sm:h-[650px] md:h-[750px] object-cover rounded-2xl shadow-lg transform hover:scale-105 transition duration-500"
+      loading="lazy"
+      width="800"
+      height="1000"
+    >
+  </div>
+
+  <!-- الصورة الصغيرة -->
+  <div class="mt-6 sm:mt-10">
+    <img 
+      src="./assets/img/Leaflets-and-brochures.webp" 
+      alt="إعلان فاخر يلفت انتباه العملاء" 
+      class="w-full h-[350px] sm:h-[450px] md:h-[500px] object-cover rounded-2xl shadow-lg transform hover:scale-105 transition duration-500"
+      loading="lazy"
+      width="600"
+      height="750"
+    >
+  </div>
+</div>
+
+
+
     </div>
   </div>
+
+ 
 </section>
+
 
 
 
