--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
         <div class="service-card bg-white p-8 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Photography-and-montage.png" alt="خدمات التصوير والمونتاج"
+            <img src="./assets/img/Photography-and-montage.webp" alt="خدمات التصوير والمونتاج"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -1103,7 +1103,7 @@
         <div class="work-item marketing rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Media-ads.jpg" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
+            <img src="./assets/img/Media-ads.webp" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
               class="w-full h-full object-cover bg-gray-100" loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
