--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Photography-and-montage.png"
+            <img src="./assets/img/Photography-and-montage.webp"
               alt="خدمات التصوير والمونتاج الاحترافية لإبراز علامتك التجارية"
               class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
 
