--- a/index.html
+++ b/index.html
@@ -1158,6 +1158,78 @@
           </div>
         </div>
 
+       <!-- عمل 7 -->
+   <div class="work-item design rounded-lg overflow-hidden shadow-lg bg-white">
+  <!-- الصورة -->
+  <div class="relative w-full h-64 sm:h-72 md:h-80">
+    <img 
+      src="./assets/img/Logo-design.png"
+      alt="تصميم وتنفيذ لوجو احترافي يعكس هوية علامتك التجارية"
+      class="w-full h-full object-fit-cover bg-gray-100" 
+      loading="lazy" 
+      width="800" 
+      height="600"
+    >
+
+    <!-- Overlay -->
+    <div
+      class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 hover:opacity-100 transition duration-500">
+      <button
+        class="view-details px-4 py-2 bg-primary text-white rounded-full shadow-lg hover:scale-105 transform transition"
+        data-id="7">
+        عرض التفاصيل
+      </button>
+    </div>
+  </div>
+
+  <!-- النصوص -->
+  <div class="p-6">
+    <h3 class="text-xl font-bold text-gray-800 mb-2">تصميم وتنفيذ اللوجو</h3>
+    <p class="text-gray-600">
+      نقدم خدمة تصميم وتنفيذ لوجو احترافي يعكس هوية علامتك التجارية
+      بأسلوب إبداعي يعبر عن رؤيتك وقيمك، مع ضمان التميز والتفرد
+      لجذب عملائك وإبراز نشاطك التجاري.
+    </p>
+  </div>
+</div>
+
+
+<!-- عمل 8 -->
+<div class="work-item design rounded-lg overflow-hidden shadow-lg bg-white">
+  <!-- الصورة -->
+  <div class="relative w-full h-64 sm:h-72 md:h-80">
+    <img 
+      src="./assets/img/WhatsApp Image 2025-09-16 at 1.14.51 PM (1) (1).jpeg"
+      alt="تصميم مطويات وبروشورات إبداعية لعرض خدماتك ومنتجاتك بشكل احترافي"
+      class="w-full h-full object-fit-cover bg-gray-100" 
+      loading="lazy" 
+      width="800" 
+      height="600"
+    >
+
+    <!-- Overlay -->
+    <div
+      class="absolute inset-0 bg-black bg-opacity-40 flex items-center justify-center opacity-0 hover:opacity-100 transition duration-500">
+      <button
+        class="view-details px-4 py-2 bg-primary text-white rounded-full shadow-lg hover:scale-105 transform transition"
+        data-id="8">
+        عرض التفاصيل
+      </button>
+    </div>
+  </div>
+
+  <!-- النصوص -->
+  <div class="p-6">
+    <h3 class="text-xl font-bold text-gray-800 mb-2">تصميم المطويات والبروشورات</h3>
+    <p class="text-gray-600">
+      نقدم خدمة تصميم مطويات وبروشورات إبداعية تساعدك في عرض منتجاتك وخدماتك
+      بشكل احترافي وجذاب، مع مراعاة هوية علامتك التجارية لتعزيز حضورك التسويقي
+      وجذب عملاء جدد.
+    </p>
+  </div>
+</div>
+
+
 
       </div>
     </div>
