--- a/index.html
+++ b/index.html
@@ -870,12 +870,7 @@
 
         <!-- الصور -->
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-8">
-          <!-- الصورة الكبيرة -->
-          <div class="mt-6 sm:mt-10">
-            <img src="./assets/img/implementation-of-lighting.webp" alt="تصميم براند إبداعي يعكس هوية العلامة التجارية"
-              class="w-full h-[550px] sm:h-[650px] md:h-[750px] object-cover rounded-2xl shadow-lg transform hover:scale-105 transition duration-500"
-              loading="lazy" width="800" height="1000">
-          </div>
+         
 
           <!-- الصورة الصغيرة -->
           <div class="mt-6 sm:mt-10">
@@ -976,7 +971,7 @@
         <!-- عمل 1 -->
         <div class="work-item design rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
-          <div class="relative w-full h-full sm:h-72 md:h-80">
+          <div class="relative w-full h-64 sm:h-72 md:h-80">
             <img src="./assets/img/lettering-design.webp" alt="تصميم لوحات وحروف بارزة ومضيئة"
               class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
 
