--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
 
                 <div class="relative">
                     <div class="rounded-2xl overflow-hidden shadow-xl">
-                        <img src="./assets/img/Logo-design.png" 
+                        <img src="./assets/img/electronic-marketing.png" 
                              alt="فريق العمل في شركة الدعاية والإعلان" class="w-full h-auto object-cover">
                     </div>
                     
@@ -615,7 +615,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-full h-64 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
+            <img src="./assets/img/design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
               class="w-full  object-fit-cover transform transition-transform duration-500 hover:scale-110" loading="lazy"
               width="800" height="600">
           </div>
@@ -651,7 +651,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Electronic-marketing.png" alt="التسويق الإلكتروني وإدارة الحملات الإعلانية"
+            <img src="./assets/img/electronic-marketing.png" alt="التسويق الإلكتروني وإدارة الحملات الإعلانية"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -685,7 +685,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Photography-and-montage.png" alt="خدمات التصوير والمونتاج"
+            <img src="./assets/img/photography-and-montage.png" alt="خدمات التصوير والمونتاج"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -717,7 +717,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/Logo-design.png" alt="تصميم لوجو وهوية بصرية احترافية"
+            <img src="./assets/img/logo-design.png" alt="تصميم لوجو وهوية بصرية احترافية"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -903,7 +903,7 @@
 <div class="flex justify-center items-start">
   <div class="mt-6 sm:mt-0 w-full max-w-lg ">
     <img 
-      src="./assets/img/Electronic-marketing.png" 
+      src="./assets/img/logo-design.png" 
       alt="إعلان فاخر يلفت انتباه العملاء"
       class="w-full h-[90%] sm:h-[90%] md:h-[85%] object-cover rounded-2xl shadow-lg transform hover:scale-105 transition duration-500"
       loading="lazy" 
@@ -1037,7 +1037,7 @@
         <div class="work-item marketing rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80 ">
-            <img src="./assets/img/Electronic-marketing.png"
+            <img src="./assets/img/electronic-marketing.png"
               alt="خدمات التسويق الإلكتروني وإدارة الحملات الإعلانية لزيادة مبيعات شركتك"
               class="w-full h-full  bg-gray-100 " loading="lazy" width="800" height="600">
 
@@ -1070,7 +1070,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Design-and-programming.webp" alt="تصميم وبرمجة المواقع الإلكترونية"
+            <img src="./assets/img/design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية"
               class="w-full h-full   bg-gray-100 " loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
@@ -1132,7 +1132,7 @@
         <div class="work-item marketing rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Media-ads.webp" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
+            <img src="./assets/img/media-ads.webp" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
               class="w-full h-full object-cover bg-gray-100" loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
@@ -1162,7 +1162,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/Photography-and-montage.webp"
+            <img src="./assets/img/photography-and-montage.png"
               alt="خدمات التصوير والمونتاج الاحترافية لإبراز علامتك التجارية"
               class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
 
@@ -1192,7 +1192,7 @@
   <!-- الصورة -->
   <div class="relative w-full h-64 sm:h-72 md:h-80">
     <img 
-      src="./assets/img/Logo-design.png"
+      src="./assets/img/logo-design.png"
       alt="تصميم وتنفيذ لوجو احترافي يعكس هوية علامتك التجارية"
       class="w-full h-full object-fit-cover bg-gray-100" 
       loading="lazy" 
@@ -1228,7 +1228,7 @@
   <!-- الصورة -->
   <div class="relative w-full h-64 sm:h-72 md:h-80">
     <img 
-      src="./assets/img/WhatsApp Image 2025-09-16 at 1.14.51 PM (1) (1).jpeg"
+      src="./assets/img/brochures.png"
       alt="تصميم مطويات وبروشورات إبداعية لعرض خدماتك ومنتجاتك بشكل احترافي"
       class="w-full h-full object-fit-cover bg-gray-100" 
       loading="lazy" 
@@ -1380,7 +1380,7 @@
 
     <!-- البانر (الصورة بعرض الصفحة) -->
     <div class="relative w-full h-[450px] md:h-[600px] overflow-hidden rounded shadow-lg my-5">
-      <img src="./assets/img/Cover Egypt.png" alt="شركة دعاية وإعلان"
+      <img src="./assets/img/cover Egypt.png" alt="شركة دعاية وإعلان"
         class="w-full h-full object-cover animate-zoom-in rounded-5" />
     </div>
   </section>
