--- a/index.html
+++ b/index.html
@@ -1461,7 +1461,7 @@
       <div
         class="group bg-white rounded-2xl shadow-lg p-8 text-center hover:-translate-y-3 hover:shadow-2xl transition duration-500 animate-fadeInUp delay-200">
         <div
-          class="bg-gradient-to-r from-green-500 to-green-600 text-white w-20 h-20 flex items-center justify-center rounded-full mx-auto mb-6 group-hover:scale-110 transition">
+          class="bg-gradient-to-r from-primary to-primary text-white w-20 h-20 flex items-center justify-center rounded-full mx-auto mb-6 group-hover:scale-110 transition">
           <i class="fas fa-chart-line text-3xl"></i>
         </div>
         <h3 class="text-xl font-bold text-gray-900 mb-4">تعزيز المبيعات</h3>
