--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-full h-64 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
+            <img src="./assets/img/Design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية باحترافية"
               class="w-full  object-fit-cover transform transition-transform duration-500 hover:scale-110" loading="lazy"
               width="800" height="600">
           </div>
@@ -651,7 +651,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/electronic-marketing.png" alt="التسويق الإلكتروني وإدارة الحملات الإعلانية"
+            <img src="./assets/img/Electronic-marketing.png" alt="التسويق الإلكتروني وإدارة الحملات الإعلانية"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -685,7 +685,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/photography-and-montage.png" alt="خدمات التصوير والمونتاج"
+            <img src="./assets/img/Photography-and-montage.png" alt="خدمات التصوير والمونتاج"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
@@ -717,7 +717,7 @@
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/logo-design.png" alt="تصميم لوجو وهوية بصرية احترافية"
+            <img src="./assets/img/Logo-design.png" alt="تصميم لوجو وهوية بصرية احترافية"
               class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
           </div>
 
