--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
 <div class="flex justify-center items-start">
   <div class="mt-6 sm:mt-0 w-full max-w-lg ">
     <img 
-      src="./assets/img/logo-design.png" 
+      src="./assets/img/Logo-design.png" 
       alt="إعلان فاخر يلفت انتباه العملاء"
       class="w-full h-[90%] sm:h-[90%] md:h-[85%] object-cover rounded-2xl shadow-lg transform hover:scale-105 transition duration-500"
       loading="lazy" 
@@ -1037,7 +1037,7 @@
         <div class="work-item marketing rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80 ">
-            <img src="./assets/img/electronic-marketing.png"
+            <img src="./assets/img/Electronic-marketing.png"
               alt="خدمات التسويق الإلكتروني وإدارة الحملات الإعلانية لزيادة مبيعات شركتك"
               class="w-full h-full  bg-gray-100 " loading="lazy" width="800" height="600">
 
@@ -1070,7 +1070,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية"
+            <img src="./assets/img/Design-and-programming.png" alt="تصميم وبرمجة المواقع الإلكترونية"
               class="w-full h-full   bg-gray-100 " loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
@@ -1132,7 +1132,7 @@
         <div class="work-item marketing rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/media-ads.webp" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
+            <img src="./assets/img/Media-ads.webp" alt="حملات إعلانية احترافية على وسائل التواصل الاجتماعي"
               class="w-full h-full object-cover bg-gray-100" loading="lazy" width="800" height="600">
 
             <!-- الأوفرلاي مع زر التفاصيل -->
@@ -1162,7 +1162,7 @@
         <div class="work-item social rounded-lg overflow-hidden shadow-lg bg-white">
           <!-- الصورة -->
           <div class="relative w-full h-64 sm:h-72 md:h-80">
-            <img src="./assets/img/photography-and-montage.png"
+            <img src="./assets/img/Photography-and-montage.png"
               alt="خدمات التصوير والمونتاج الاحترافية لإبراز علامتك التجارية"
               class="w-full h-full object-cover bg-gray-100 " loading="lazy" width="800" height="600">
 
@@ -1192,7 +1192,7 @@
   <!-- الصورة -->
   <div class="relative w-full h-64 sm:h-72 md:h-80">
     <img 
-      src="./assets/img/logo-design.png"
+      src="./assets/img/Logo-design.png"
       alt="تصميم وتنفيذ لوجو احترافي يعكس هوية علامتك التجارية"
       class="w-full h-full object-fit-cover bg-gray-100" 
       loading="lazy" 
@@ -1228,7 +1228,7 @@
   <!-- الصورة -->
   <div class="relative w-full h-64 sm:h-72 md:h-80">
     <img 
-      src="./assets/img/brochures.png"
+      src="./assets/img/Brochures.png"
       alt="تصميم مطويات وبروشورات إبداعية لعرض خدماتك ومنتجاتك بشكل احترافي"
       class="w-full h-full object-fit-cover bg-gray-100" 
       loading="lazy" 
