--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" type="image/x-icon" href="./assets/img/ايجيبت للدعاية والاعلان 1.png">
+  <link rel="icon" type="image/x-icon" href="./assets/img/logo-egypt-advertising-1.webp">
 
 
   <!-- ====== SEO ====== -->
@@ -23,7 +23,7 @@
   <meta property="og:title" content="ايجبت للدعاية والإعلان - افضل شركة دعاية واعلان في جدة">
   <meta property="og:description"
     content="حلول مبتكرة في التسويق والإعلان، تصميم الحملات الإعلانية والهويات البصرية والمحتوى المرئي لتعزيز نجاح علامتك التجارية.">
-  <meta property="og:image" content="https://creativity-omega.vercel.app/assets/img/og-image.jpg">
+  <meta property="og:image" content="https://egypt-advertising.com/assets/img/og-image.jpg">
   <meta property="og:url" content="https://creativity-omega.vercel.app/">
   <meta property="og:site_name" content="ايجبت للدعاية والإعلان">
 
@@ -151,7 +151,7 @@
     <!-- Logo -->
     <div class="flex items-center space-x-reverse space-x-4">
       <div class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full">
-        <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
+        <img src="./assets/img/logo-egypt-advertising-1.webp" alt="ايجبت للدعاية والإعلان">
       </div>
       <div>
         <h2 class="text-xl font-bold gradient-text">ايجبت للدعاية والإعلان</h2>
@@ -1565,7 +1565,7 @@
 
         <div class="relative rounded-full w-56 h-56 flex items-center justify-center shadow-xl"
           style="background: linear-gradient(135deg, rgba(14,135,121,0.15), rgba(14,135,121,0.3));">
-          <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="لوجو الشركة" class="w-24 h-24 object-contain">
+          <img src="./assets/img/logo-egypt-advertising-1.webp" alt="لوجو الشركة" class="w-24 h-24 object-contain">
         </div>
 
       </div>
@@ -1610,7 +1610,7 @@
         <div class="flex items-center space-x-reverse space-x-3 mb-6">
           <div
             class=" text-white p-3 rounded-lg w-14 h-14 flex items-center justify-center shadow-md rounded-full border-white border-2 bg-white">
-            <img src="./assets/img/ايجيبت للدعاية والاعلان 1.png" alt="">
+            <img src="./assets/img/logo-egypt-advertising-1.webp" alt="">
           </div>
           <div>
             <h3 class="text-xl font-bold">ايجبت للدعاية والإعلان</h3>
