add Add a page for printing banners, flex and vinyl

--- a/index.html
+++ b/index.html
@@ -432,12 +432,6 @@
 
 
 
-
-
-
-
-
-
   <!-- Services Section -->
   <section id="services" class="py-20 bg-white" aria-labelledby="services-heading">
     <div class="container mx-auto px-4">
@@ -451,33 +445,42 @@
 
       <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-8">
 
-        <div class="service-card bg-white p-4 rounded-2xl fade-in">
-          <!-- الصورة بدل الأيقونة -->
-          <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
-            <img src="./assets/img/lettering-design.webp" alt="تصميم الحروف المضيئة والبارزة"
-              class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
-          </div>
+      <div class="service-card bg-white p-4  rounded-2xl fade-in">
+  <!-- الصورة بدل الأيقونة -->
+  <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
+    <img src="./assets/img/lettering-design.webp" alt="تصميم الحروف المضيئة والبارزة"
+      class="w-full h-full object-contain transform transition-transform duration-500 hover:scale-110">
+  </div>
 
-          <h2 class="text-xl font-bold mb-4">تصميم اللوحات والحروف البارزة والمضيئة </h2>
-          <p class="text-gray-600 mb-6">
-            نوفر خدمات متخصصة في تصميم وتنفيذ الحروف المضيئة والبارزة بجودة عالية ولمسة عصرية،
-            تمنح علامتك التجارية حضوراً مميزاً سواء للمحلات التجارية أو الشركات أو المعارض.
-          </p>
+  <h2 class="text-xl font-bold mb-4">تصميم اللوحات والحروف البارزة والمضيئة</h2>
+  <p class="text-gray-600 mb-6">
+    نوفر خدمات متخصصة في تصميم وتنفيذ الحروف المضيئة والبارزة بجودة عالية ولمسة عصرية،
+    تمنح علامتك التجارية حضوراً مميزاً سواء للمحلات التجارية أو الشركات أو المعارض.
+  </p>
 
-          <ul class="text-sm text-gray-500 space-y-2 mb-6">
-            <li><i class="fas fa-check text-primary ml-2"></i>حروف نيون مضيئة (Neon Letters)</li>
-            <li><i class="fas fa-check text-primary ml-2"></i>حروف ثلاثية الأبعاد (3D Letters)</li>
-            <li><i class="fas fa-check text-primary ml-2"></i>تصاميم خاصة تناسب هوية نشاطك</li>
-          </ul>
+  <ul class="text-sm text-gray-500 space-y-2 mb-6">
+    <li><i class="fas fa-check text-primary ml-2"></i>حروف نيون مضيئة (Neon Letters)</li>
+    <li><i class="fas fa-check text-primary ml-2"></i>حروف ثلاثية الأبعاد (3D Letters)</li>
+    <li><i class="fas fa-check text-primary ml-2"></i>تصاميم خاصة تناسب هوية نشاطك</li>
+  </ul>
 
-          <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
-        </div>
+  <!-- الأزرار -->
+  <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="./services/serv-tow/index.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
+    </div>
+
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
           <!-- الصورة -->
           <div class="w-100 h-100 mb-6 mx-auto overflow-hidden">
@@ -504,12 +507,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+ <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
@@ -543,12 +554,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+          <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
@@ -582,12 +601,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center mt-2">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+           <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="./services/serv-one/index.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
@@ -618,12 +645,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+           <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
@@ -655,12 +690,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+201234567890"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-4 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+           <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
@@ -687,12 +730,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+ <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
@@ -723,12 +774,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+          <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
         <div class="service-card bg-white p-4 rounded-2xl fade-in">
@@ -757,12 +816,20 @@
           </ul>
 
           <!-- زر الاتصال -->
-          <div class="text-center">
-            <a href="tel:+965501234567"
-              class="bg-gradient-to-r from-primary to-primary-dark text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition">
-              <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
-            </a>
-          </div>
+           <div class="text-center space-x-3 space-x-reverse">
+    <!-- زر الاتصال -->
+    <a href="tel:+965501234567"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+      <i class="fas fa-phone-alt ml-2"></i> اتصل بنا
+    </a>
+
+    <!-- زر قراءة المزيد -->
+    <a href="details.html"
+      class="gradient-primary text-white px-3 py-2 rounded-lg shadow-md hover:scale-105 transform transition inline-block">
+       قراءة المزيد
+    <i class="fas fa-arrow-left ml-2 "></i>
+      </a>
+  </div>
         </div>
 
 
